add the defaults for the new questions about git service and git account.

--- a/init.conf
+++ b/init.conf
@@ -15,6 +15,16 @@ dcCOMMON_SHARED_DIR=
 # in and will be the initial region when running the aws configure
 REGION=
 
+# this is the default git service name that the customer uses.  This 
+# is saved in the shared settings file.  This is something like github
+# assembla or another such service that house git repositories
+GIT_SERVICE_NAME="github"
+
+# this is the place holder for the customers account name on the 
+# GIT_SERVICE it is left blank and will get filled in by the CUSTOMER_NAME
+# after they enter it.  Otherwise it can go here.
+GIT_ACCOUNT_NAME=
+
 # This ia basic default directory that is a suggestion that a customer
 # may use that could be a standard directory to put the application
 # directory structure in for development.  If it's the same across all
