add code to show the representation of what needs to be entered for the shared diretory... it needs to include the devops.center as the last element in the path.

--- a/init.conf
+++ b/init.conf
@@ -9,6 +9,7 @@ USER_NAME=
 # this is the base directory of the shared drive that will likely be
 # on all developers local development machines.  If they have renamed
 # it then they will have to change it when asked
+# example: /home/username/Google Drive/devops.center
 dcCOMMON_SHARED_DIR=
 
 # this is default region that the customer will put their application
